src/less/nault-theme.less
/* ... */
.transactions-list {
	.type-column {
		min-width: 25px;
		position: relative;

		> .type {
			position: absolute;
			top: calc(50% - 12px);
			left: 13px;

			&.rep-change {
				color: #A478E3;
			}
		}
	}

	.account-column {
		.account-container {
			text-decoration: none;

			.identicon-name-row {
				display: flex;
				flex-direction: row;
				align-items: center;
				height: 28px;
				margin-bottom: 5px;

				.nano-identicon {
					display: inline-block;
					width: 27px;
					height: 27px;
					margin-right: 12px;
					margin-left: 1px;
					flex-shrink: 0;

					.canvas-container canvas {
						border-radius: 3px;
					}
				}
			}

			.nano-address-clickable {
				flex-shrink: 0;
				margin-top: 3px;
			}
		}

		.nano-address-actions {
			margin-bottom: 11px !important;
		}

		.block-hash {
			text-decoration: none;
			display: inline-block;
			border-bottom: 2px solid transparent;
			transition: border-color 100ms ease-in-out;

			&:hover {
				border-color: #999;
			}
		}

		.arrow-down {
			margin: 1px 0 16px -2px;
		}
	}

	.amount-column {
		white-space: nowrap;
		text-align: right;

		.amount-integer, .amount-fractional, .currency-name {
			font-family: 'Montserrat', Arial, Helvetica, sans-serif;
			font-size: 16px;
		}

		.amount-integer {
			font-weight: 700;
		}

		.amount-fractional {
			font-weight: 500;
		}

		.currency-name {
			font-weight: 400;
			margin-left: 5px;
		}

		&.rep-change {
			color: #A478E3;
		}

		.compact-actions-date {
			margin-top: 20px;

			button {
				font-size: 12px;
				padding: 8px 20px;
			}

			.button-container + .button-container {
				margin-top: 10px;
			}

			.label-unconfirmed {
				display: none;
			}

			.date-unknown {
				display: none;
			}
		}
	}

	.date-column {
		min-width: 180px;

		button {
			white-space: nowrap;
		}

		.button-container + .button-container {
			margin-top: 10px;
		}
	}

	.more-results {
		text-align: center;

		a:hover {
			text-decoration: none;
		}
	}

	// Adaptive properties only
	.account-column {
		min-width: 155px;
		width: 45%;
	}

	.amount-column {
		width: 55%;

		.compact-actions-date {
			display: block;

			.transaction-date {
				font-size: 15px;
			}
		}
	}

	.date-column {
		display: none;
	}

	@media (max-width: 599px) {
		th {
			font-size: 0.9rem;
		}

		.type-column {
			padding-right: 2px;
		}

		.account-column {
			// Not on table headings
			td& {
				font-size: 0.8rem;
			}

			.nano-address-clickable > .uk-flex {
				flex-wrap: wrap;
				width: 125px;

				.nano-address-middle {
					width: 0;
				}

				.nano-address-suffix {
					margin-left: 69px; // Nice
				}
			}

			.block-hash {
				max-width: 155px;
			}
		}

		td.amount-column {
			font-size: 12px;

			.amount-integer, .amount-fractional {
				font-size: 13px;
				margin: 5px 0 -3px 0;
			}

			.currency-name {
				font-size: 13px;
				margin-left: 0;
				display: block;
			}

			.compact-actions-date {
				.transaction-date {
					font-size: 14px;

					.date, .time {
						display: block;
					}
				}
			}
		}
	}

	@media (min-width: 800px) and (max-width: 939px) {
		.account-column {
			width: 45%;
			min-width: 210px;
		}

		.amount-column {
			width: 35%;
			text-align: left;
			padding-left: 30px;

			.compact-actions-date {
				display: none;
			}
		}

		.date-column {
			display: table-cell;
			width: 20%;
		}
	}

	@media (min-width: 1200px) {
		.account-column {
			width: 55%;
			min-width: 210px;
		}

		.amount-column {
			width: 25%;
			text-align: left;

			.compact-actions-date {
				display: none;
			}
		}

		.date-column {
			display: table-cell;
			width: 20%;
		}
	}

	@media (min-width: 1600px) {
		.account-column {
			width: 60%;
		}

		.amount-column {
			width: 20%;
		}
	}
}

// Account details page
.representative-details::after {
	border-bottom: 1px solid #dce9f9;
}

// Send page
.send-types-tab-active, .send-types-tab-active:focus, .send-types-tab-active:hover {
	color: #555 !important;
	background: #F4FAFF;
}

// Representatives page
.delegating-account-row {
	border-top: none !important;
	border-bottom: none !important;
}

.delegating-account-row + .representative-row {
	border-top: 1px solid #DCE9F9 !important;
}

.delegating-account-row:last-child {
	border-bottom: 1px solid #DCE9F9 !important;
}

// App Settings page
#node-stats-table tr:not(:last-child) td {
	border-bottom: 1px solid #dce9f9;
}

// New Wallet page
.mne-cont {
	display: block;
	border-bottom: 1px dashed #449af373;
}

// Welcome page
.welcome-features-container {
	display: grid;
	grid-template-columns: 1fr;
	grid-gap: 20px;

	@media (min-width: 1200px) {
		grid-template-columns: 1fr 1fr;
	}

	> .feature {
		display: flex;
		flex-direction: column;
		background: #FCFCFF;

		> .icon {
			display: flex;
			flex-direction: column;
			align-items: center;
			margin-bottom: 20px;

			> svg {
				width: 60%;
				max-width: 200px;
				color: #4A90E2;

				> * {
					stroke: currentcolor;
				}
			}
		}

		> h2 {
			color: #4A90E2;
			margin: 0;
			font-weight: 400;
			line-height: 1.2;
			font-size: 25px;
			margin-bottom: 15px;
			text-align: center;
		}

		> p {
			font-family: 'Montserrat', Arial, Helvetica, sans-serif;
			margin: 0;
			line-height: 1.6;
			font-size: 16px;
		}

		> p + p {
			margin-top: 10px;
		}
	}
}

// Wallet Setup page
.wallet-setup-card {
	background: #FCFCFF;
}
/* ... */

